issue-1 refactoring
