# internal/infrastructure/server/swagger/models/model_protobuf_create_category_response.go
@@ -1,16 +1,0 @@
-/*
- * internal/infrastructure/protobuf/contracts.proto
- *
- * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
- *
- * API version: version not set
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-
-package models
-
-type ProtobufCreateCategoryResponse struct {
-	Id string `json:"id,omitempty"`
-
-	Error_ string `json:"error,omitempty"`
-}
