# internal/infrastructure/server/swagger/models/model_protobuf_order_entity_no_id.go
@@ -1,30 +1,0 @@
-/*
- * internal/infrastructure/protobuf/contracts.proto
- *
- * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
- *
- * API version: version not set
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-
-package models
-
-type ProtobufOrderEntityNoId struct {
-	AuthorID string `json:"AuthorID,omitempty"`
-
-	BuyerID string `json:"BuyerID,omitempty"`
-
-	Title string `json:"Title,omitempty"`
-
-	Description string `json:"Description,omitempty"`
-
-	Price string `json:"Price,omitempty"`
-
-	CreatedAt string `json:"CreatedAt,omitempty"`
-
-	UpdatedAt string `json:"UpdatedAt,omitempty"`
-
-	ClosedAt string `json:"ClosedAt,omitempty"`
-
-	DeletedAt string `json:"DeletedAt,omitempty"`
-}
