# internal/infrastructure/server/swagger/models/model_protobuf_search_orders_response.go
@@ -1,16 +1,0 @@
-/*
- * internal/infrastructure/protobuf/contracts.proto
- *
- * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
- *
- * API version: version not set
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-
-package models
-
-type ProtobufSearchOrdersResponse struct {
-	Error_ string `json:"error,omitempty"`
-
-	Orders []ProtobufOrderEntity `json:"orders,omitempty"`
-}
